[tool.poetry]
name = "a-bot-full-of-dumb-quotes"
version = "0.1.0"
description = ""
authors = ["kociumba"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
dadjokes = "^1.3.2"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
